--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ Thumbs.db
 # Build output
 /dist
 /build
+**/**/dist/**
 
 # Test coverage
 coverage/
@@ -30,3 +31,4 @@ coverage/
 *.swo
 
 .history
+.eslintrc
