--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ecm-api",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon ./src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/server.js",
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +20,20 @@
     "redis": "^4.7.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@faker-js/faker": "^9.2.0",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.12.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "supertest": "^7.0.0"
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ]
   }
 }
