--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-PORT=3000
-MONGO_URL=your_mongo_uri
+PORT=port_number
+MONGO_URI=your_mongo_uri
 JWT_SECRET=your_jwt_secret
 REDIS_URI=your_redis_uri
