Add Dockerfile and docker-compose.yml

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,8 @@
-PORT=port_number
+APP_PORT=port_number
+NODE_ENV=node_env
 MONGO_URI=your_mongo_uri
 JWT_SECRET=your_jwt_secret
 REDIS_URI=your_redis_uri
+REDIS_PASSWORD=your_redis_password
+MONGO_USER=mongo_user
+MONGO_PASSWORD=mongo_password
