--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ Thumbs.db
 # IDE/editor files
 .vscode/
 .idea/
+.history
 
 # Build output
 /dist
@@ -26,9 +27,10 @@ Thumbs.db
 
 # Test coverage
 coverage/
+__tests__
 
 # Temporary files
 *.swp
 *.swo
 
-.history
+scripts
