--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "dev": "nodemon ./src/server.js",
+    "dev": "NODE_ENV=development nodemon ./src/server.js",
     "test": "jest --verbose --detectOpenHandles"
   },
   "keywords": [],
