--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest --verbose --detectOpenHandles"
   },
   "keywords": [],
-  "author": "",
+  "author": "lilit baghunts",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -31,6 +31,8 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
