--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - mongo-data:/data/db
 
   redis:
-    image: redis:7.0
+    image: redis:latest
     container_name: redis
     ports:
       - '6379:6379'
